<resources>
    <string name="app_name">LUMC</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_test_drawer">TestDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="types">
        <item>Medication</item>
        <item>Precaution</item>
        <item>Examination</item>
    </string-array>

    <string-array name="Exams">
        <item>Cholesterol</item>
        <item>Hematology</item>
        <item>Vitamin A</item>
        <item>Vitamin B</item>
        <item>Vitamin C</item>
        <item>Vitamin D</item>
    </string-array>

    <string-array name="BloodGroups">
        <item>BloodGroup</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="selection">
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>


    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="lname" >Last Name</string>
    <string name="fname" >First Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="Email">Email</string>
</resources>
