<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:paddingTop="25dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">

               <TextView
                   android:layout_marginTop="50dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="50dp"
                   android:text="@string/register"
                   android:textColor="#fff"
                   android:textSize="16sp"
                   android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/selection"
                            android:id="@+id/activity_register_sp_userType"/>
                    </LinearLayout>

               <LinearLayout
                   android:layout_marginTop="10dp"
                   android:paddingLeft="50dp"
                   android:paddingRight="30dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">

                   <android.support.design.widget.TextInputLayout
                       android:textColorHint="#f0f7f4"
                       android:layout_width="match_parent"
                       android:theme="@style/TextLabel"
                       android:layout_height="wrap_content">

                       <EditText
                           android:textSize="13sp"
                           android:hint="@string/Email"
                           android:textColor="#f0f7f4"
                           android:id="@+id/activity_register_et_email"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textEmailAddress"
                           android:background="@drawable/selector_bg_edit_2"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:paddingBottom="2dp"/>

                   </android.support.design.widget.TextInputLayout>

               </LinearLayout>

                    <LinearLayout
                       android:paddingLeft="50dp"
                       android:paddingRight="30dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:theme="@style/TextLabel"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/Password"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_password"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="textPassword"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
               <LinearLayout
                   android:paddingLeft="50dp"
                   android:paddingRight="30dp"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">

                   <android.support.design.widget.TextInputLayout
                       android:textColorHint="#f0f7f4"
                       android:theme="@style/TextLabel"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <EditText
                           android:textSize="13sp"
                           android:textColor="#f0f7f4"
                           android:hint="@string/repeat_password"
                           android:id="@+id/activity_register_et_repeatpassword"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPassword"
                           android:background="@drawable/selector_bg_edit_2"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:paddingBottom="2dp"/>

                   </android.support.design.widget.TextInputLayout>

               </LinearLayout>

                    <LinearLayout
                       android:paddingLeft="50dp"
                       android:paddingRight="30dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:layout_weight="1"
                           android:paddingRight="3dp"
                           android:theme="@style/TextLabel"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/fname"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_fname"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="textPersonName"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:theme="@style/TextLabel"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:paddingLeft="3dp">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/lname"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_lname"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="textPersonName"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

               </LinearLayout>

                    <LinearLayout
                       android:paddingLeft="50dp"
                       android:paddingRight="30dp"
                       android:layout_width="match_parent"
                       android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:theme="@style/TextLabel"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/phone"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_phone"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="phone"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:paddingLeft="50dp"
                        android:paddingRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/spc">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:layout_width="match_parent"
                            android:theme="@style/TextLabel"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="13sp"
                                android:hint="Specialty"
                                android:textColor="#f0f7f4"
                                android:id="@+id/activity_register_et_specialty"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingLeft="50dp"
                        android:paddingRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/expyr">

                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:layout_width="match_parent"
                            android:theme="@style/TextLabel"
                            android:layout_height="wrap_content">

                            <EditText
                                android:textSize="13sp"
                                android:hint="Years of Experience"
                                android:textColor="#f0f7f4"
                                android:id="@+id/activity_register_et_expYears"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"
                                android:inputType="number"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                       android:paddingLeft="50dp"
                       android:paddingRight="30dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:theme="@style/TextLabel"
                           android:layout_weight="1"
                           android:paddingRight="3dp"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/city"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_city"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="text"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:theme="@style/TextLabel"
                           android:layout_weight="1"
                           android:paddingLeft="3dp"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/street"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_street"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="text"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                       android:paddingLeft="50dp"
                       android:paddingRight="30dp"
                       android:layout_width="match_parent"
                       android:layout_height="40dp">

                        <android.support.design.widget.TextInputLayout
                           android:textColorHint="#f0f7f4"
                           android:layout_width="match_parent"
                           android:theme="@style/TextLabel"
                           android:layout_height="wrap_content">

                            <EditText
                               android:textSize="13sp"
                               android:hint="@string/building"
                               android:textColor="#f0f7f4"
                               android:id="@+id/activity_register_et_building"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="text"
                               android:background="@drawable/selector_bg_edit_2"
                               android:textCursorDrawable="@drawable/bg_input_cursor_2"
                               android:paddingBottom="2dp"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <Button
                       android:layout_marginTop="20dp"
                       android:layout_marginBottom="10dp"
                       android:layout_gravity="center_horizontal"
                       android:id="@+id/activity_register_bt_go"
                       android:background="@drawable/bt_shape_2"
                       android:stateListAnimator="@drawable/state_list_animator_z"
                       android:layout_width="150dp"
                       android:layout_height="50dp"
                       android:text="@string/next"
                       android:textColor="#2fa881">
                    </Button>


                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus_x"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv_add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-22dp"/>

</RelativeLayout>
